gloo-configs/vm-gateway.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  annotations:
  labels:
    app: gloo
  name: vm-proxy
  namespace: gloo-system
spec:
  bindAddress: '::'
  bindPort: 8080
  httpGateway:
    virtualServiceSelector:
      gateway: vm
  proxyNames:
  - vm-proxy
  useProxyProto: false
