gloo-configs/vm-petstore.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: vm-petstore
  namespace: gloo-system
  labels:
    gateway: vm
spec:
  virtualHost:
    domains:
    - 'vm.test.com'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: vm-petstore
            namespace: gloo-system
